fixed white space in stock bar

--- a/src/components/stockBar/style.css
+++ b/src/components/stockBar/style.css
@@ -1,6 +1,11 @@
 .banner {
     display: flex;
     justify-content: flex-start;
+    overflow: hidden;
+}
+
+.column-item {
+    margin-left:35px;
 }
 .stockNum{
     color: red;
